# arisvideo-python

./: .env.example  AUDIO_OVERLAY_FIX.md  AUDIO_SYNC_IMPLEMENTATION.md  BIDIRECTIONAL_MATCHING_IMPLEMENTATION.md  README.md  app.py  config.ini  db.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
middleware/: api_key_auth.py
models/: schemas.py
services/: audio_processor.py  file_processor.py  manim_optimizer.py  manim_script_modifier.py  script_generator.py  status_tracker.py  video_processor.py
test_media/videos/: 05cf6532-fb34-4042-ba40-9d7adcc2d622.srt  0c2532e5-8576-4369-82de-064d7498a8fa.srt
tests/: README.md  conftest.py  test_database.py  test_generate_endpoint.py  test_video_generation.py
tests/mocks/: mock_claude.py  mock_manim.py  mock_openai.py
utils/: __init__.py  manim_config.py
